# assay

./: .editorconfig  .gitignore  .linear.toml  .mise.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  WORKFLOW-assay.md  deny.toml  feature.rs  justfile  package-lock.json  rust_out
crates/assay-backends/: Cargo.toml
crates/assay-backends/src/: factory.rs  github.rs  lib.rs  linear.rs  smelt.rs  ssh.rs
crates/assay-backends/tests/: github_backend.rs  linear_backend.rs  smelt_backend.rs  ssh_backend.rs
crates/assay-cli/: Cargo.toml
crates/assay-cli/src/: main.rs
crates/assay-cli/src/commands/: checkpoint.rs  context.rs  criteria.rs  gate.rs  harness.rs  history.rs  init.rs  manifest.rs  mcp.rs  milestone.rs  mod.rs  plan.rs  pr.rs  run.rs  spec.rs  traces.rs  wizard_helpers.rs  worktree.rs
crates/assay-core/: Cargo.toml
crates/assay-core/src/: error.rs  evaluator.rs  init.rs  lib.rs  manifest.rs  manifest_gen.rs  merge.rs  pipeline.rs  pipeline_checkpoint.rs  pr.rs  state_backend.rs  telemetry.rs  wizard.rs  work_session.rs  worktree.rs
crates/assay-core/src/checkpoint/: config.rs  extractor.rs  mod.rs  persistence.rs
crates/assay-core/src/config/: mod.rs
crates/assay-core/src/context/: budgeting.rs  diagnostics.rs  discovery.rs  mod.rs  parser.rs  tokens.rs
crates/assay-core/src/gate/: evidence.rs  mod.rs  render.rs  session.rs
crates/assay-core/src/guard/: circuit_breaker.rs  config.rs  daemon.rs  mod.rs  pid.rs  thresholds.rs  watcher.rs
crates/assay-core/src/history/: analytics.rs  mod.rs
crates/assay-core/src/milestone/: cycle.rs  mod.rs
crates/assay-core/src/orchestrate/: conflict_resolver.rs  dag.rs  executor.rs  gossip.rs  merge_runner.rs  mesh.rs  mod.rs  ordering.rs
crates/assay-core/src/review/: mod.rs
crates/assay-core/src/spec/: compose.rs  coverage.rs  mod.rs  promote.rs  validate.rs
crates/assay-core/src/wizard/: criteria.rs  gate.rs  milestone.rs  mod.rs
crates/assay-core/src/workflow/: mod.rs
crates/assay-core/tests/: analytics.rs  config_provider.rs  cycle.rs  gossip_integration.rs  integration_modes.rs  merge_propose.rs  mesh_integration.rs  milestone_io.rs  orchestrate_integration.rs  orchestrate_spans.rs  otel_metrics.rs  pipeline_auto_promote.rs  pipeline_spans.rs  pipeline_streaming.rs  pr.rs  pr_status.rs  state_backend.rs  telemetry_otlp.rs  trace_export.rs  wizard.rs  wizard_criteria.rs  wizard_gate.rs
crates/assay-cupel/: Cargo.toml
crates/assay-cupel/src/: error.rs  lib.rs
crates/assay-cupel/src/model/: context_item.rs  context_kind.rs
crates/assay-cupel/src/pipeline/: mod.rs  place.rs  slice.rs
crates/assay-cupel/src/placer/: mod.rs  u_shaped.rs
crates/assay-cupel/src/scorer/: kind.rs  mod.rs  scaled.rs
crates/assay-cupel/src/slicer/: mod.rs  quota.rs
crates/assay-cupel/tests/: conformance.rs
crates/assay-cupel/tests/conformance/: pipeline.rs  placing.rs  slicing.rs
crates/assay-harness/: Cargo.toml
crates/assay-harness/src/: claude.rs  claude_stream.rs  codex.rs  lib.rs  opencode.rs  prompt.rs  provider.rs  scope.rs  settings.rs
crates/assay-harness/src/snapshots/: assay_harness__claude__tests__cli_args_full.snap  assay_harness__claude__tests__hooks_no_model_hooks_json.snap  assay_harness__claude__tests__hooks_no_model_settings_json.snap  assay_harness__claude__tests__minimal_claude_md.snap  assay_harness__claude__tests__minimal_hooks_json.snap  assay_harness__claude__tests__minimal_settings_json.snap  assay_harness__claude__tests__realistic_claude_md.snap  assay_harness__claude__tests__realistic_hooks_json.snap  assay_harness__claude__tests__realistic_mcp_json.snap  assay_harness__claude__tests__realistic_settings_json.snap  assay_harness__codex__tests__codex_cli_args_full.snap  (+14 more)
crates/assay-mcp/: Cargo.toml
crates/assay-mcp/src/: lib.rs  logging.rs  server.rs  signal_server.rs  spike.rs
crates/assay-mcp/tests/: mcp_handlers.rs  signal_server.rs
crates/assay-tui/: Cargo.toml
crates/assay-tui/src/: agent.rs  app.rs  event.rs  gate_wizard.rs  lib.rs  main.rs  mcp_panel.rs  slash.rs  trace_viewer.rs  wizard.rs  wizard_draw.rs
crates/assay-tui/tests/: agent_run.rs  analytics_screen.rs  app_state.rs  app_wizard.rs  gate_wizard_app.rs  gate_wizard_round_trip.rs  help_status.rs  mcp_panel.rs  pr_status_panel.rs  provider_dispatch.rs  settings.rs  slash_commands.rs  spec_browser.rs  trace_viewer.rs  wizard_round_trip.rs
crates/assay-types/: Cargo.toml
crates/assay-types/examples/: generate-schemas.rs
crates/assay-types/src/: agent_event.rs  checkpoint.rs  context.rs  coverage.rs  criteria_library.rs  criterion.rs  enforcement.rs  evaluator.rs  evidence.rs  feature_spec.rs  gate.rs  gate_run.rs  gates_spec.rs  harness.rs  lib.rs  manifest.rs  merge.rs  milestone.rs  orchestrate.rs  precondition.rs  provider.rs  resolved_gate.rs  review.rs  schema_registry.rs  session.rs  signal.rs  state_backend.rs  validation.rs  wizard_input.rs  work_session.rs  worktree.rs
crates/assay-types/tests/: context_types.rs  schema_roundtrip.rs  schema_snapshots.rs
crates/smelt-cli/: Cargo.toml
crates/smelt-cli/src/: lib.rs  main.rs
crates/smelt-cli/tests/: cli_agent.rs  cli_integration.rs  cli_merge.rs  cli_session.rs  compose_lifecycle.rs  docker_lifecycle.rs  dry_run.rs  k8s_lifecycle.rs  status_pr.rs
crates/smelt-core/: Cargo.toml
crates/smelt-core/src/: assay.rs  collector.rs  compose.rs  config.rs  docker.rs  error.rs  forge.rs  init.rs  k8s.rs  lib.rs  manifest.rs  monitor.rs  provider.rs  tracker.rs
smelt/: .gitignore  Cargo.toml  README.md
smelt/.assay/: config.toml
smelt/.assay/specs/: backend.toml  integration.toml
smelt/.cargo/: config.toml
smelt/.forgejo/workflows/: ci.yml
smelt/.githooks/: pre-commit  pre-push
smelt/.kata/: QUEUE.md  preferences.md
smelt/.planning/: REQUIREMENTS.md
smelt/.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  SUMMARY.md
smelt/crates/smelt-cli/: .gitignore  Cargo.toml
smelt/crates/smelt-core/: Cargo.toml
smelt/examples/: bad-manifest.toml  job-manifest-compose.toml
(+2466 files in other folders)
