[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/wollax/smelt"

[workspace.dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# Async
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "signal", "io-util"] }
futures-util = "0.3"

# Docker
bollard = "0.20"

# Serialization
serde = { version = "1", features = ["derive"] }
toml = "1"
base64 = "0.22"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
which = "8"
indexmap = { version = "2", features = ["serde"] }
tokio-util = { version = "0.7", features = ["rt"] }
uuid = { version = "1", features = ["v4"] }
axum = "0.8"
serde_json = "1"

# Dev/test
assert_cmd = "2"
predicates = "3"
tempfile = "3"
