[workspace]
resolver = "2"
members = ["crates/*", "smelt/crates/*"]

[workspace.package]
version = "0.5.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/wollax/assay"

[workspace.dependencies]
cupel = "1.2.0"
cupel-otel = "0.2.0"
cupel-testing = "0.1.0"
assay-types = { path = "crates/assay-types" }
assay-core = { path = "crates/assay-core" }
assay-harness = { path = "crates/assay-harness" }
assay-backends = { path = "crates/assay-backends" }
assay-mcp = { path = "crates/assay-mcp" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = { version = "1", features = ["chrono04"] }
rmcp = { version = "0.17", features = ["server", "transport-io"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["limit"] }
http-body-util = "0.1"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
ratatui = "0.30"
crossterm = "0.28"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "registry"] }
opentelemetry = { version = "0.31", features = ["metrics"] }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio", "metrics"] }
opentelemetry-otlp = { version = "0.31", default-features = false, features = ["http-proto", "hyper-client", "metrics"] }
tracing-opentelemetry = { version = "0.32" }
chrono = { version = "0.4", features = ["serde"] }
toml = "1"
thiserror = "2"
color-eyre = "0.6"
inventory = "0.3"
insta = { version = "1.46", features = ["json"] }
jsonschema = "0.43"
libc = "0.2"
tempfile = "3"
anyhow = "1"
serial_test = "3"
dirs = "6"
hostname = "0.4"
regex-lite = "0.1"
notify = { version = "7", default-features = false, features = ["macos_kqueue"] }
reqwest = { version = "0.13", features = ["json"] }
tracing-appender = "0.2"
tracing-test = { version = "0.2", features = ["no-env-filter"] }
which = "8"
ulid = { version = "1.2", features = ["serde"] }
globset = "0.4"
dialoguer = "0.12.0"

# Smelt workspace deps (shared with smelt/crates/*)
base64 = "0.22"
bollard = "0.20"
futures-util = "0.3"
indexmap = { version = "2", features = ["serde"] }
tokio-util = { version = "0.7", features = ["rt"] }
tokio-stream = { version = "0.1", features = ["sync"] }
uuid = { version = "1", features = ["v4"] }
assert_cmd = "2"
predicates = "3"
serde_yaml = "0.9"
semver = { version = "1", features = ["serde"] }

[workspace.lints.clippy]
derive_partial_eq_without_eq = "deny"
