[package]
name = "assay-backends"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
assay-core = { workspace = true, features = ["orchestrate"] }
assay-types = { workspace = true, features = ["orchestrate"] }
reqwest = { version = "0.13", features = ["blocking", "json"], optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true, optional = true }
tracing = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
mockito = "1"
serial_test.workspace = true
tempfile = { workspace = true }
tracing-test = { workspace = true }

[features]
linear = ["reqwest"]
github = []
ssh = ["tempfile"]
smelt = ["reqwest"]
