[package]
name = "assay-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Assay command-line interface"

[[bin]]
name = "assay"
path = "src/main.rs"

[dependencies]
assay-core.workspace = true
assay-types.workspace = true
assay-mcp.workspace = true
chrono.workspace = true
clap.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true

[lints]
workspace = true
