[package]
name = "assay-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Assay command-line interface"

[[bin]]
name = "assay"
path = "src/main.rs"

[dependencies]
assay-backends = { workspace = true }
assay-core = { workspace = true, features = ["orchestrate"] }
assay-harness.workspace = true
assay-types.workspace = true
assay-mcp.workspace = true
chrono.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
dialoguer.workspace = true

[features]
telemetry = ["assay-core/telemetry"]

[dev-dependencies]
serial_test.workspace = true
tempfile.workspace = true

[lints]
workspace = true
