[package]
name = "assay-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Domain logic for Assay: specs, gates, reviews, and workflows"

[dependencies]
assay-types.workspace = true
chrono.workspace = true
cupel.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
dirs.workspace = true
regex-lite.workspace = true
thiserror.workspace = true
toml.workspace = true
notify.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
which.workspace = true
ulid.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[dev-dependencies]
serial_test.workspace = true

[lints]
workspace = true
