[package]
name = "assay-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Domain logic for Assay: specs, gates, reviews, and workflows"

[dependencies]
assay-types.workspace = true
chrono.workspace = true
cupel.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
dirs.workspace = true
hostname.workspace = true
regex-lite.workspace = true
thiserror.workspace = true
toml.workspace = true
notify.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
which.workspace = true
ulid.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[dev-dependencies]
serial_test.workspace = true
tracing-test.workspace = true

[features]
orchestrate = ["assay-types/orchestrate"]

[lints]
workspace = true
