[package]
name = "assay-harness"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Agent harness adapters for Assay: prompt building, settings merging, and agent-specific config generation"

[dependencies]
assay-types.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
globset.workspace = true

[dev-dependencies]
insta.workspace = true
tempfile.workspace = true

[lints]
workspace = true
