[package]
name = "assay-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "MCP server library for Assay"

[features]
testing = []

[dependencies]
assay-core = { workspace = true, features = ["orchestrate"] }
assay-harness.workspace = true
assay-types = { workspace = true, features = ["orchestrate"] }
chrono.workspace = true
rmcp.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true

[dev-dependencies]
assay-mcp = { path = ".", features = ["testing"] }
insta.workspace = true
tempfile.workspace = true
serial_test.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
