[package]
name = "assay-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "MCP server library for Assay"

[features]
testing = []

[dependencies]
assay-backends = { workspace = true }
assay-core = { workspace = true, features = ["orchestrate"] }
assay-harness.workspace = true
assay-types = { workspace = true, features = ["orchestrate"] }
axum.workspace = true
tower-http.workspace = true
chrono.workspace = true
rmcp.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
ulid.workspace = true
hostname.workspace = true
reqwest.workspace = true

[dev-dependencies]
assay-mcp = { path = ".", features = ["testing"] }
http-body-util.workspace = true
insta.workspace = true
mockito = "1"
tempfile.workspace = true
serial_test.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower.workspace = true

[lints]
workspace = true
