[package]
name = "assay-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Assay terminal user interface"

[dependencies]
assay-core.workspace = true
assay-types.workspace = true
assay-harness.workspace = true
ratatui.workspace = true
crossterm.workspace = true
color-eyre.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
