[package]
name = "assay-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Assay terminal user interface"

[dependencies]
assay-core.workspace = true
assay-harness.workspace = true
assay-types.workspace = true
ratatui.workspace = true
crossterm.workspace = true
color-eyre.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tracing.workspace = true
regex-lite.workspace = true

[dev-dependencies]

[lints]
workspace = true
