[package]
name = "assay-types"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared serializable types for Assay"

[dependencies]
serde.workspace = true
schemars.workspace = true
chrono.workspace = true

[dev-dependencies]
serde_json.workspace = true
toml.workspace = true
