[package]
name = "assay-types"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared serializable types for Assay"

[dependencies]
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
chrono.workspace = true
inventory.workspace = true

[dev-dependencies]
toml.workspace = true
insta.workspace = true
jsonschema.workspace = true

[lints]
workspace = true
