[package]
name = "smelt-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Smelt command-line interface"

[[bin]]
name = "smelt"
path = "src/main.rs"

[dependencies]
smelt-core.path = "../smelt-core"
clap.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
which.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
base64.workspace = true
bollard.workspace = true
predicates.workspace = true
tempfile.workspace = true
which.workspace = true
tokio.workspace = true
