[package]
name = "smelt-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Smelt core library — job execution engine and domain types"

[dependencies]
bollard.workspace = true
futures-util.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
toml.workspace = true
which.workspace = true

[dev-dependencies]
tempfile.workspace = true
