[package]
name = "smelt-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Smelt command-line interface"

[[bin]]
name = "smelt"
path = "src/main.rs"

[dependencies]
smelt-core = { path = "../smelt-core", features = ["forge"] }
clap.workspace = true
anyhow.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
which.workspace = true
serde.workspace = true
tokio-util.workspace = true
tokio-stream.workspace = true
futures-util.workspace = true
uuid.workspace = true
axum.workspace = true
serde_json.workspace = true
tempfile.workspace = true
ratatui.workspace = true
crossterm.workspace = true
reqwest = { workspace = true, features = ["json", "stream"] }

[dev-dependencies]
assert_cmd.workspace = true
toml.workspace = true
base64.workspace = true
bollard.workspace = true
indexmap.workspace = true
predicates.workspace = true
which.workspace = true
tokio.workspace = true
