[package]
name = "smelt-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Smelt core library — job execution engine and domain types"
keywords = ["docker", "ci", "github", "assay", "infrastructure"]
categories = ["command-line-utilities", "development-tools"]
homepage = "https://github.com/wollax/smelt"

[dependencies]
assay-types = { path = "../../../crates/assay-types" }
base64.workspace = true
bollard.workspace = true
indexmap.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
toml.workspace = true
tempfile.workspace = true
which.workspace = true
octocrab = { version = "0.49", optional = true }
serde_yaml.workspace = true
kube = { version = "3", features = ["runtime", "ws"] }
k8s-openapi = { version = "0.27", features = ["v1_32"] }

[features]
forge = ["dep:octocrab"]

[dev-dependencies]
wiremock = "0.6"
rustls = { version = "0.23", features = ["ring"] }
